# satellite-images-preprocess

./: .gitignore  Dockerfile  README.md  creat_meta.py  create_meta.ipynb  create_meta.py  pyproject.toml  requirements.txt  setup.sh  test.py
.github/workflows/: build-image.yml
archives/raya/: create_meta.py
argo-workflows/: pipeline-workflow.yaml  split-data-very-raw.yaml
bash/: run-preprocessing.sh
src/: find_images_test.py  plot_labeled_images.py  preprocess-ilot-geom.py  preprocess-satellite-images.py  split_raw_images.py
src/classes/filters/: filter.py
src/classes/labelers/: labeler.py
src/config/: bb_test.yaml
src/functions/: download_data.py  image_utils.py  labelling.py  plot_utils.py  process_images.py
src/utils/: mappings.py
